<resources>
    <string name="app_name">Cordial Care</string>
    <string-array name="symptoms_array">
        <item>Nausea</item>
        <item>Headache</item>
        <item>diarrhea</item>
        <item>Soar Throat</item>
        <item>Fever</item>
        <item>Muscle Ache</item>
        <item>Loss of smell or taste</item>
        <item>Cough</item>
        <item>Shortness of breadth</item>
        <item>Feeling tired</item>
    </string-array>
    <string name="UploadSymptomsButton">Symptoms</string>
    <string name="UpdateButton">Update Symptoms</string>
    <string name="SymptomsPageHeading">Please select a Symptom</string>
    <string name="RecordVideoButton">Click here to Record a Video</string>
    <string name="UploadSigns">Upload Signs</string>
    <string name="MeasureHeartRate">Measure Heart Rate</string>
    <string name="MeasureRespiratoryRate">Measure Respiratory Rate</string>

</resources>