<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <Button
        android:id="@+id/RecordButton"
        android:layout_width="187dp"
        android:layout_height="96dp"
        android:layout_marginTop="32dp"
        android:text="@string/RecordVideoButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545" />

    <Button
        android:id="@+id/UploadSymptomsButton"
        android:layout_width="127dp"
        android:layout_height="45dp"
        android:text="@string/UploadSymptomsButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/RespiratoryRateMeasurementButton"
        android:layout_width="304dp"
        android:layout_height="67dp"
        android:text="@string/MeasureRespiratoryRate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.776" />

    <Button
        android:id="@+id/UploadSignsButton"
        android:layout_width="128dp"
        android:layout_height="45dp"
        android:text="@string/UploadSigns"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.361" />

    <Button
        android:id="@+id/HeartRateMeasurementButton"
        android:layout_width="308dp"
        android:layout_height="64dp"
        android:layout_marginTop="100dp"
        android:text="@string/MeasureHeartRate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.946" />

    <TextView
        android:id="@+id/heart_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="0.00"
        app:layout_constraintBottom_toTopOf="@+id/HeartRateMeasurementButton"
        app:layout_constraintEnd_toEndOf="@+id/HeartRateMeasurementButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/HeartRateMeasurementButton" />

    <TextView
        android:id="@+id/breathing_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="0.00"
        app:layout_constraintBottom_toTopOf="@+id/RespiratoryRateMeasurementButton"
        app:layout_constraintEnd_toEndOf="@+id/RespiratoryRateMeasurementButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/RespiratoryRateMeasurementButton" />

</androidx.constraintlayout.widget.ConstraintLayout>